tests/ui/typeck/function_calls/new_interface.sol
//@ compile-flags: -Ztypeck

interface I {}
contract C {
    function f() public pure {
        new I(); //~ ERROR: cannot instantiate interfaces
    }
}
